--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vuestic-ui": "^1.3.2"
   }
 }
