--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
         "sourceMap": true,
         "module": "ES2015",
         "target": "ES5",
-        "moduleResolution": "node"
-    }
+        "moduleResolution": "node",
+    },
+    "exclude": [
+        "./node_modules",
+        "./local_modules"
+    ],
 }
